--- a/pair.html
+++ b/pair.html
@@ -2,38 +2,165 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ARHAM-FAROOQUE PAIR</title>
+  <title>ARHAM-PAIRING TERMINAL</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      font-family: 'Courier New', Courier, monospace;
-      background-color: #0a0a0a;
-      color: #33cc33;
+      font-family: 'Courier New', monospace;
+      background: radial-gradient(circle at center, #0f0f0f, #000000);
+      color: #33ff33;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 50px 20px;
-      overflow: hidden;
+      padding: 40px 20px;
+      min-height: 100vh;
+      overflow-x: hidden;
     }
+
     h1 {
-      color: #33cc33;
-      font-size: 42px;
-      margin-bottom: 30px;
-      text-shadow: 0 0 10px #33cc33, 0 0 20px #33cc33, 0 0 30px #33cc33;
-      animation: glow 1.5s infinite alternate;
+      font-size: 38px;
+      margin-bottom: 40px;
+      color: #33ff33;
+      text-shadow: 0 0 10px #33ff33, 0 0 30px #00ff00, 0 0 50px #00ff99;
+      animation: flicker 2s infinite alternate;
     }
-    @keyframes glow {
-      0% {
-        text-shadow: 0 0 20px #33cc33, 0 0 30px #33cc33, 0 0 40px #33cc33;
-      }
-      100% {
-        text-shadow: 0 0 10px #33cc33, 0 0 20px #33cc33, 0 0 30px #33cc33;
-      }
+
+    @keyframes flicker {
+      0% { opacity: 1; }
+      50% { opacity: 0.8; }
+      100% { opacity: 1; }
     }
+
     .terminal {
-      background-color: #111111;
-      color: #33cc33;
+      background: #111;
+      padding: 25px;
+      border-radius: 15px;
+      width: 100%;
+      max-width: 700px;
+      border: 2px solid #33ff33;
+      box-shadow: 0 0 20px #00ff66;
+      margin-bottom: 30px;
+      transition: transform 0.4s ease;
+    }
+
+    .terminal:hover {
+      transform: scale(1.02);
+    }
+
+    input, button {
+      padding: 14px;
+      font-size: 18px;
+      border-radius: 10px;
+      border: none;
+      margin: 12px 0;
+      width: 100%;
+      max-width: 500px;
+      background: #1a1a1a;
+      color: #33ff33;
+      border: 2px solid #33ff33;
+      outline: none;
+      transition: 0.3s;
+    }
+
+    input:focus {
+      border-color: #ff6600;
+      box-shadow: 0 0 10px #ff6600;
+    }
+
+    button {
+      background: #222;
+      cursor: pointer;
+      font-weight: bold;
+      letter-spacing: 1px;
+    }
+
+    button:hover {
+      background: #333;
+      transform: scale(1.05);
+      box-shadow: 0 0 15px #33ff33;
+    }
+
+    .output {
+      margin-top: 25px;
+      background: #111;
       padding: 20px;
+      border-radius: 12px;
+      max-width: 650px;
+      border: 2px solid #33ff33;
+      font-size: 18px;
+      box-shadow: 0 0 15px #00ff66;
+      color: #33ff33;
+      white-space: pre-wrap;
+      word-break: break-word;
+      display: none;
+    }
+
+    .typing {
+      border-right: 2px solid #33ff33;
+      white-space: nowrap;
+      overflow: hidden;
+      display: inline-block;
+      animation: typing 2.5s steps(40, end), blink 0.8s step-end infinite;
+    }
+
+    @keyframes typing {
+      from { width: 0 }
+      to { width: 100% }
+    }
+
+    @keyframes blink {
+      50% { border-color: transparent }
+    }
+  </style>
+</head>
+<body>
+
+  <h1>⚡ ARHAM-PAIRING TERMINAL ⚡</h1>
+
+  <div class="terminal">
+    <span>~$</span> 
+    <input type="text" id="number" placeholder="Enter WhatsApp Number (e.g., 923703250530)">
+    <button onclick="getCode()">🔑 Generate Pair Code</button>
+  </div>
+
+  <div id="result" class="output"></div>
+
+  <script>
+    async function getCode() {
+      const number = document.getElementById("number").value.trim();
+      const resultBox = document.getElementById("result");
+
+      if (!number) {
+        showTypingEffect(resultBox, "⚠️ Please enter a valid number.");
+        return;
+      }
+
+      resultBox.style.display = "block";
+      showTypingEffect(resultBox, "⏳ Generating code, please wait...");
+
+      try {
+        const res = await fetch(`/code?number=${encodeURIComponent(number)}`);
+        const data = await res.json();
+
+        if (data.code) {
+          showTypingEffect(resultBox, `✅ Pairing Code: ${data.code}`);
+        } else if (data.error) {
+          showTypingEffect(resultBox, `❌ Error: ${data.error}`);
+        } else {
+          showTypingEffect(resultBox, "⚠️ Unknown response received.");
+        }
+      } catch (err) {
+        showTypingEffect(resultBox, `❌ Failed to get code: ${err.message}`);
+      }
+    }
+
+    function showTypingEffect(element, message) {
+      element.innerHTML = `<span class="typing">${message}</span>`;
+    }
+  </script>
+
+</body>
+</html>
       border-radius: 12px;
       font-size: 20px;
       width: 100%;
@@ -171,3 +298,4 @@
 
 </body>
   </html>
+
